--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.2.7",
     "@types/node": "^17.0.21",
+    "typescript": "latest",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "find-cache-dir": "^3.3.2",
